--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Mohamed Baghdady</title>
 
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-	<link rel="stylesheet" href="CSS/styles.css">
+	<link rel="stylesheet" type="text/css" href="CSS/styles.css">
 	<link rel="icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/css?family=Arimo|Bangers|Gochi+Hand&display=swap" rel="stylesheet">
 </head>
