Update Profile Pic Link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div class="middle-container" id="C2">
 		<div class="profile">
-			<img class="profilePic" src="/images/DSC_0393.jpg" alt="profile-pic">
+			<img class="profilePic" src="images/DSC_0393.jpg" alt="profile-pic">
 			<h2>PERSONAL SUMMARY </h2>
 			<p class="personal-paragraph">I am Mohamed Baghdady, 32 years old, An enthusiastic, self-motivated and highly organized individual with all round bookkeeping experience. Having an excellent working knowledge of double entry bookkeeping, managing accounts, maintaining a sales ledger, raising invoices, issuing regular statements, processing receipts and keep track of Value Added Tax (“VAT”) and Withholding Tax (“WHT”) related transactions along with periodic filing of VAT and WHT returns in compliance with Kingdom of Saudi Arabia regulations. Easy going by nature but focused enough to take responsibility for reconciliation of all ledgers, accruals & prepayments, settlement of suppliers and generate payment runs. Presently looking for a suitable bookkeeping position. </p>
 		</div>
