Correcting E-mail Address of Contact Me Link

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 			<h2>Get In Touch</h2>
 			<h3>For any job opportunities, please get in touch</h3>
 			<p>For directly contacting me please click on CONTACT ME below and drop me an e-mail, looking forward to hear from you!.</p>
-			<a class="btn btn-secondary btn-lg" href="mailto:m.baghdady@gmail.com">CONTACT ME</a>
+			<a class="btn btn-secondary btn-lg" href="mailto:m.baghdady6588@gmail.com">CONTACT ME</a>
 		</div>
 	</div>
 
