--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img class="d-block w-100" src="Images/dsi2.png" alt="First slide">
+						<img class="d-block w-100" src="Images/DSI-new.png" alt="First slide">
 						<h5>Dywidag Systems International - Saudi Arabia</h5>
 					</div>
 					<div class="carousel-item">
@@ -145,7 +145,11 @@
 
 					</div>
 					<div class="carousel-item">
-						<img class="d-block w-100" src="https://lh3.googleusercontent.com/proxy/BqaHwX0w7DLjAz6B0i4dBijBcmaul3a8vcDn6nV1Aft6SnoushzfvRKeOrXU70DFXQvFbs9tkjnVe6yFyROAC2NdAw" alt="Third slide">
+						<img class="d-block w-100" src="Images/Fuel.jpg" alt="Third slide">
+						<h5>Fuel Media Consulting LLC.</h5>
+					</div>
+					<div class="carousel-item">
+						<img class="d-block w-100" src="Images/CGALogoUnset.fw.png" alt="Third slide">
 						<h5>COLSA Global Arabia</h5>
 					</div>
 					<div class="carousel-item">
