Add services and bookkeeping section

--- a/index.html
+++ b/index.html
@@ -43,7 +43,56 @@
 	</div>
 
 	<div class="middle-container" id="C2">
+		<div class="myServices">
+		<h2>SERVICES</h2>
+			<div class="row servList">
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-book"></i>
+					<h6>Accounting / Bookkeeping</h6>
+				</div>
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-file-invoice-dollar"></i>
+					<h6>Sales Tax Invoices</h6>
+				</div>
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-money-check"></i>
+					<h6>Payroll Management</h6>
+				</div>
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-coins"></i>
+					<h6>Value Added Tax Returns</h6>
+				</div>
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-funnel-dollar"></i>
+					<h6>Withholding Tax Returns</h6>
+				</div>
+				<div class="col-lg-2 col-sm-6">
+					<i class="fas fa-chart-bar"></i>
+					<h6>Management Reports</h6>
+				</div>
 
+			</div>
+
+		</div>
+		<div class="accountingSummary">
+			<h2>Accounting and Bookkeeping Services</h2>
+			<img class="bookkeepingIMG" src="Images/Bookkeeping.jpg" alt="Bookkeeping IMG">
+			<p class="accountingParagraph">Bookkeeping is an integral part of any business’ tax planning strategy. The proper organization, storage and maintenance of your business’ accounting and financial documents will help you avert tax and zakat reporting problems.
+
+Accurate bookkeeping helps gauge your business’ success, you’ll be able to see exactly how well you’re doing. You can review the patterns and trends of your business performance and compare them to previous years. You can also keep track of your expenses and address pain points in your financial status quickly.
+
+
+Professional bookkeeping doesn’t just help with your business operations. With an organized bookkeeping system, you can easily pull data and convert it into comprehensible charts and metrics. This will give you the confidence and certainty to present to investors and potential investors. Letting them know how your company is performing gives them assurance and helps maintain their trust and loyalty.
+
+However, the process of bookkeeping can be tedious and difficult and many businesses are not as focused as maybe they should be in proper bookkeeping. This along with other factors can contribute to why many small businesses end up failing during their first few years. They can’t keep up with the changes and the demands happening in their businesses that they fail or forget to exert enough effort to properly organize their books.<br>
+<br>
+<strong>Leave the Organizing to Us:</strong><br>
+Bookkeeping is an important part of your business but it doesn’t have to keep you up at night. MyBookkeeperServices is a professional bookkeeping company that offers high-quality services for small business across Kingdom of Saudi Arabia.
+
+Through our monthly bookkeeping service, you can focus on other aspects of your business and leave the documentation of financial and accounting reports to us. With our services, you can be sure that your business’ financial records are well kept and organized.
+
+Contact us today so we can discuss how best to maintain your financial books and records.</p>
+		</div>
 		<div class="profile">
 
 			<h2>PERSONAL SUMMARY </h2>
